--- a/JS/index.html
+++ b/JS/index.html
@@ -9,7 +9,7 @@
             alert("hola mundo con js");
         </script>
         -->
-        <script type="text/javascript" src="07-switch.js"></script>
+        <script type="text/javascript" src="10-ventanas.js"></script>
 
     </head>
     <body>
