--- a/JS/index.html
+++ b/JS/index.html
@@ -9,7 +9,7 @@
             alert("hola mundo con js");
         </script>
         -->
-        <script type="text/javascript" src="24-plantillas.js"></script>
+        <script type="text/javascript" src="27-ejercicio-arrays.js"></script>
 
     </head>
     <body>
