--- a/JS/index.html
+++ b/JS/index.html
@@ -9,11 +9,22 @@
             alert("hola mundo con js");
         </script>
         -->
-        <script type="text/javascript" src="27-ejercicio-arrays.js"></script>
+        
 
     </head>
     <body>
         <h1>Curso JAvaScript</h1>
         <p>Nuestro primer script en JS</p>
+
+        <section id="miseccion">
+            <h1 class="encabezado">Listado de textos de los divs</h1>
+        </section>
+        <div id="micaja">hola soy una caja</div>
+
+        <div class="amarillo">soy el primer div</div>
+        <div class="rojo">yo el segundo</div>
+        <div class="rojo">el tercero soy yo</div>
+        <!-- scripts -->
+        <script type="text/javascript" src="28-dom.js"></script>
     </body>
 </html>
