--- a/JS/index.html
+++ b/JS/index.html
@@ -26,5 +26,6 @@
         <div class="rojo">el tercero soy yo</div>
         <!-- scripts -->
         <script type="text/javascript" src="28-dom.js"></script>
+        <script type="text/javascript" src="29-bom.js"></script>
     </body>
 </html>
