--- a/JS/pagina.html
+++ b/JS/pagina.html
@@ -12,6 +12,11 @@
         <h2>peliculas</h2>
     </div>
 
-    <script src="33-json.js"></script>
+    <div id="datos">
+
+    </div>
+    <!--<script src="33-json.js"></script>-->
+    <!--<script src="34-localstorage.js"></script>-->
+    <script src="35-ejercicio-localstorage.js"></script>
 </body>
 </html>
