--- a/JS/pagina.html
+++ b/JS/pagina.html
@@ -7,14 +7,25 @@
     
 </head>
 <body>
-    <h1>JSON</h1>
+    <h1>Añade tu pelicula</h1>
+    <form action="" id="formpeliculas">
+
+        <input type="text" name="" id="addpelicula">
+        <button type="submit">guardar</button>
+    </form>
+
+    <h2>peliculas</h2>
     <div id="peliculas">
-        <h2>peliculas</h2>
-    </div>
+        <ul id="peliculas-list">
 
-    <div id="datos">
-
+        </ul>
     </div>
+    <h1>Borra tu pelicula</h1>
+    <form action="" id="formborrarPeliculas">
+
+        <input type="text" name="" id="borrarPelicula">
+        <button type="submit">guardar</button>
+    </form>
     <!--<script src="33-json.js"></script>-->
     <!--<script src="34-localstorage.js"></script>-->
     <script src="35-ejercicio-localstorage.js"></script>
