--- a/proyecto-js/about.html
+++ b/proyecto-js/about.html
@@ -43,9 +43,9 @@
             <nav id="menu">
                 <ul>
                     <li><a href="index.html">INICIO</a></li>
-                    <li><a href="#">RELOJ</a></li>
+                    <li><a href="reloj.html">RELOJ</a></li>
                     <li><a href="about.html">SOBRE MI</a></li>
-                    <li><a href="#">CONTACTO</a></li>
+                    <li><a href="contact.html">CONTACTO</a></li>
 
                 </ul>
             </nav>
