--- a/poo-y-javascript/index.html
+++ b/poo-y-javascript/index.html
@@ -17,7 +17,7 @@
         ,dado que typescript es traducido automaticamente por el navegador a js
     
     -->
-    <script src="js/04-funciones.js"></script>
+    <script src="js/camiseta.js"></script>
 </head>
 <body>
     <h1>Programacion orientada a objetos en JS y Typescript</h1>
